--- a/ICE_1.html
+++ b/ICE_1.html
@@ -5,13 +5,38 @@
     <title>In Class Exercise 1</title>
 </head>
 <body>
+    <div>
     <h1>My 5590 Lecture 1 Page</h1>
-   <div>
+    </div>
+    <div>
+   <div style="width: 50%;height: auto;float: left">
        <h2>About me</h2>
-    <p>I am a M.S. C.S. student at <b>UMKC</b>. I studied math in undergrad.</p>
+       <p style="width: 80%">I am a M.S. C.S. student at <b>UMKC</b>. I studied math in undergrad. I am adding additional text to this to fill
+    it out and make it a paragraph. Hopefully it is long enough now, who knows, haven't checked yet.</p>
+       <div style="width: 50%;height: auto;float: left;">
+           <ul>
+               <li>Angular</li>
+               <li>Node.js</li>
+               <li>D3</li>
+           </ul>
+       </div>
    </div>
+    <div style="height: auto; width: 50%;float: right">
     <h2>Social Media</h2>
     <a href="https://www.linkedin.com/in/spencer-cook-329b2325/">LinkedIn</a>
-    <a  href="http://www.varsitytutors.com/tutors/878067257">Varsity Tutors</a>
+    <div>
+    <span>
+    <img height="5%" width="5%" src="510TvXNB.png">
+    <a  href="http://www.varsitytutors.com/tutors/878067257">Varsity Tutors</a></span>
+    </div>
+        <div style="width: 50%;height: auto;float: left;">
+            <ol>
+                <li>Python</li>
+                <li>HTML</li>
+                <li>JS</li>
+            </ol>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
