--- a/Source/ICE_1.html
+++ b/Source/ICE_1.html
@@ -26,7 +26,7 @@
     <a href="https://www.linkedin.com/in/spencer-cook-329b2325/">LinkedIn</a>
     <div>
     <span>
-    <img height="5%" width="5%" src="510TvXNB.png">
+    <img height="5%" width="5%" src="/D">
     <a  href="http://www.varsitytutors.com/tutors/878067257">Varsity Tutors</a></span>
     </div>
         <div style="width: 50%;height: auto;float: left;">
