--- a/Lab1/Source/index.html
+++ b/Lab1/Source/index.html
@@ -32,8 +32,9 @@
     <ol>
         <li>Make sure you have an account and if not, make one</li>
         <li>Make the repo you'd like</li>
-        <li>CLone it to a local directory so you can wor with it</li>
+        <li>Clone it to a local directory so you can work with it</li>
     </ol>
 </div>
+<div><iframe width="1280" height="720" src="https://www.youtube.com/embed/NNsouJDZPT0" frameborder="0" allowfullscreen></iframe></div>
 </body>
 </html>
