--- a/Lab 3/Source/index.html
+++ b/Lab 3/Source/index.html
@@ -23,7 +23,7 @@
         <!-- Add your site or application content here -->
         <div class="container">
             <div class="row">
-                <p id="login">Please Login</p>
+                <p id="login">Please Register</p>
             </div>
             <div class="row">
                 <form action="git.html">
